--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "mailgen": "^2.0.27",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "otp-generator": "^4.0.1",
     "uid": "^2.0.1"
   },
   "devDependencies": {
