--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "firebase-admin": "^11.8.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
