--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "otp-generator": "^4.0.1",
+    "qrcode": "^1.5.3",
     "uid": "^2.0.1"
   },
   "devDependencies": {
