--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "haversine": "^1.1.1",
     "helmet": "^6.1.5",
     "joi": "^17.9.2",
+    "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
     "mongoose": "^6.9.2",
