--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-subdomain": "^1.0.5",
     "firebase-admin": "^11.8.0",
     "haversine": "^1.1.1",
     "helmet": "^6.1.5",
@@ -31,7 +32,8 @@
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.1",
-    "uid": "^2.0.1"
+    "uid": "^2.0.1",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
