--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "node test.js",
-    "script": "node script.js"
+    "script": "node script.js",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -36,8 +37,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "nodemon": "^2.0.20",
     "axios": "^1.3.6",
-    "socket.io-client": "^4.7.1"
+    "esbuild": "^0.18.13",
+    "nodemon": "^2.0.20",
+    "socket.io-client": "^4.7.1",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   }
 }
