--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
+    "moment": "^2.29.4",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
