--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "node test.js",
     "script": "node script.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "pkg index.js -d"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
@@ -39,10 +40,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "axios": "^1.3.6",
-    "esbuild": "^0.18.13",
     "nodemon": "^2.0.20",
-    "socket.io-client": "^4.7.1",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4"
+    "socket.io-client": "^4.7.1"
   }
 }
