--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "node test.js",
     "script": "node script.js",
-    "build": "pkg index.js -d"
+    "build": "pkg index.js -d --target server"
   },
   "keywords": [],
   "author": "",
