--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "node test.js",
     "script": "node script.js",
-    "build": "pkg index.js -d --target server"
+    "build": "pkg index.js -d --target linux --output server"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "esbuild": "^0.18.15",
     "express-rate-limit": "^6.7.0",
     "express-subdomain": "^1.0.5",
     "firebase-admin": "^11.8.0",
@@ -39,8 +39,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@snowpack/plugin-webpack": "^3.0.0",
     "axios": "^1.3.6",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "snowpack": "^3.8.8",
     "socket.io-client": "^4.7.1"
   }
 }
