--- a/nginx.conf
+++ b/nginx.conf
@@ -15,17 +15,14 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/peomax.com/privkey.pem;
 
   location / {
-    root /var/www/peomax;
-    index index.html index.htm;
+    proxy_pass http://154.56.46.170:8080;  # Update the proxy_pass to the new address and port
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
-    try_files $uri $uri/ /index.html;
   }
 }
-
 
 server {
   listen 443 ssl;
@@ -43,7 +40,6 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 }
-
 
 server {
   listen 443 ssl;
