--- a/nginx.conf
+++ b/nginx.conf
@@ -57,3 +57,55 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 }
+
+server {
+  listen 443 ssl;
+  server_name admin.peomax.com;
+
+  ssl_certificate /etc/letsencrypt/live/admin.peomax.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/admin.peomax.com/privkey.pem;
+
+  location /{
+    proxy_pass http://154.56.46.170:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+}
+
+
+server {
+  listen 443 ssl;
+  server_name tg.peomax.com;
+
+  ssl_certificate /etc/letsencrypt/live/tg.peomax.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/tg.peomax.com/privkey.pem;
+
+  location /{
+    proxy_pass http://154.56.46.170:7000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name ec.peomax.com;
+
+  ssl_certificate /etc/letsencrypt/live/ec.peomax.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/ec.peomax.com/privkey.pem;
+
+  location /{
+    proxy_pass http://154.56.46.170:5000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+}
