--- a/nginx.conf
+++ b/nginx.conf
@@ -56,6 +56,20 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
   }
+
+  location /socket.io {
+    proxy_pass http://154.56.46.170:4000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
 }
 
 server {
@@ -77,21 +91,36 @@ server {
 
 
 server {
-  listen 443 ssl;
-  server_name tg.peomax.com;
+    listen 443 ssl;
+    server_name tg.peomax.com;
 
-  ssl_certificate /etc/letsencrypt/live/tg.peomax.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/tg.peomax.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tg.peomax.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tg.peomax.com/privkey.pem;
 
-  location /{
-    proxy_pass http://154.56.46.170:7000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-  }
+    location / {
+        proxy_pass http://154.56.46.170:7000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Socket.IO specific configuration
+    location /socket.io {
+        proxy_pass http://154.56.46.170:7000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
+
 
 server {
   listen 443 ssl;
