--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "@snowpack/plugin-webpack": "^3.0.0",
     "axios": "^1.3.6",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "snowpack": "^3.8.8",
-    "socket.io-client": "^4.7.1"
+    "nodemon": "^2.0.20"
   }
 }
