--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/peomax.com/privkey.pem;
 
   location / {
-    proxy_pass http://154.56.46.170:8080;  # Update the proxy_pass to the new address and port
+    proxy_pass http://localhost:8080;  # Update the proxy_pass to the new address and port
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -32,7 +32,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/peomax.com/privkey.pem;
 
   location /{
-    proxy_pass http://154.56.46.170:3000;
+    proxy_pass http://localhost:3000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -49,7 +49,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/peomax.com/privkey.pem;
 
   location /{
-    proxy_pass http://154.56.46.170:4000;
+    proxy_pass http://localhost:4000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -58,7 +58,7 @@ server {
   }
 
   location /socket.io {
-    proxy_pass http://154.56.46.170:4000;
+    proxy_pass http://localhost:4000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
@@ -80,7 +80,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/admin.peomax.com/privkey.pem;
 
   location /{
-    proxy_pass http://154.56.46.170:3500;
+    proxy_pass http://localhost:3500;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -98,7 +98,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/tg.peomax.com/privkey.pem;
 
     location / {
-        proxy_pass http://154.56.46.170:7000;
+        proxy_pass http://localhost:7000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -108,7 +108,7 @@ server {
 
     # Socket.IO specific configuration
     location /socket.io {
-        proxy_pass http://154.56.46.170:7000;
+        proxy_pass http://localhost:7000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -130,7 +130,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/ec.peomax.com/privkey.pem;
 
   location /{
-    proxy_pass http://154.56.46.170:5000;
+    proxy_pass http://localhost:5000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
