--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # PORT=4500
-mongo_url=mongodb+srv://vemozelvagz:sX6LSFAKFBEtCWX5@cluster0.gdppbr3.mongodb.net/?retryWrites=true&w=majority
+# mongo_url=mongodb+srv://vemozelvagz:sX6LSFAKFBEtCWX5@cluster0.gdppbr3.mongodb.net/?retryWrites=true&w=majority
+mongo_url=mongodb://154.56.46.170:27017/test
 access_token_secret_key=b3z40awv65cal5b
 refresh_token_secret_key=lz8173y020tsp16
 api_key=613ta90v58u2k7p
