--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^6.9.1",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.3",
+    "request": "^2.88.2",
     "socket.io": "^4.7.1",
     "uid": "^2.0.1",
     "vhost": "^3.0.2"
