New nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,8 @@ server {
   listen 443 ssl;
   server_name peomax.com www.peomax.com;
 
-  ssl_certificate /etc/letsencrypt/live/peomax.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/peomax.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/peomax.com-0001/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/peomax.com-0001/privkey.pem;
 
   location / {
     proxy_pass http://localhost:8080;  # Update the proxy_pass to the new address and port
