--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "node test.js",
     "script": "node script.js",
-    "build": "pkg index.js -d --target linux --output server"
+    "build": "pkg index.js -t node16-linux-x64 -d"
   },
   "keywords": [],
   "author": "",
