--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "qrcode": "^1.5.3",
     "request": "^2.88.2",
     "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.2",
     "uid": "^2.0.1",
     "vhost": "^3.0.2"
   },
