--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,9 @@ server {
   ssl_certificate /etc/letsencrypt/live/peomax.com-0001/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/peomax.com-0001/privkey.pem;
 
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
+
+
   location / {
     proxy_pass http://localhost:8080;  # Update the proxy_pass to the new address and port
     proxy_http_version 1.1;
@@ -31,6 +34,9 @@ server {
   ssl_certificate /etc/letsencrypt/live/management.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/management.peomax.com/privkey.pem;
 
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
+
+
   location /{
     proxy_pass http://localhost:3000;
     proxy_http_version 1.1;
@@ -47,6 +53,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/api.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.peomax.com/privkey.pem;
+
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
+
 
   location /{
     proxy_pass http://localhost:4000;
@@ -78,6 +87,9 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/admin.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/admin.peomax.com/privkey.pem;
+
+add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
+
 
   location /{
     proxy_pass http://localhost:3500;
