Added x-fra,e header

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/peomax.com-0001/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/peomax.com-0001/privkey.pem;
 
+add_header X-Frame-Options "SAMEORIGIN" always;
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
 
 
@@ -34,6 +35,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/management.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/management.peomax.com/privkey.pem;
 
+add_header X-Frame-Options "SAMEORIGIN" always;
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
 
 
@@ -54,6 +56,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/api.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/api.peomax.com/privkey.pem;
 
+add_header X-Frame-Options "SAMEORIGIN" always;
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
 
 
@@ -88,6 +91,7 @@ server {
   ssl_certificate /etc/letsencrypt/live/admin.peomax.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/admin.peomax.com/privkey.pem;
 
+add_header X-Frame-Options "SAMEORIGIN" always;
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
 
 
