--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/peomax.com-0001/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/peomax.com-0001/privkey.pem;
+  more_clear_headers Server;
 
 add_header X-Frame-Options "SAMEORIGIN" always;
 add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*; font-src 'self'; connect-src 'self' https://api.peomax.com;";
