--- a/package.json
+++ b/package.json
@@ -13,37 +13,38 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "esbuild": "^0.18.15",
-    "exceljs": "^4.3.0",
-    "express-rate-limit": "^6.7.0",
-    "firebase-admin": "^11.8.0",
+    "dotenv": "^16.3.1",
+    "esbuild": "^0.19.5",
+    "exceljs": "^4.4.0",
+    "express-rate-limit": "^7.1.4",
+    "firebase-admin": "^11.11.0",
     "haversine": "^1.1.1",
-    "helmet": "^6.1.5",
-    "joi": "^17.9.2",
-    "joi-password-complexity": "^5.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mailgen": "^2.0.27",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
-    "mongoose": "^6.9.2",
+    "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "^6.9.7",
     "otp-generator": "^4.0.1",
+    "pdfkit": "^0.14.0",
     "qrcode": "^1.5.3",
     "request": "^2.88.2",
-    "socket.io": "^4.7.1",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "uid": "^2.0.1",
+    "uid": "^2.0.2",
     "vhost": "^3.0.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@faker-js/faker": "^8.3.1",
     "@snowpack/plugin-webpack": "^3.0.0",
-    "axios": "^1.3.6",
+    "axios": "^1.6.2",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   }
 }
