--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name peomax.com www.peomax.com;
+  server_name name.com www.name.com;
 
   location / {
     return 301 https://$host$request_uri;
@@ -9,10 +9,10 @@ server {
 
 server {
   listen 443 ssl;
-  server_name peomax.com www.peomax.com;
+  server_name name.com www.name.com;
 
-  ssl_certificate /etc/letsencrypt/live/peomax.com-0001/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/peomax.com-0001/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/name.com-0001/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/name.com-0001/privkey.pem;
   more_clear_headers Server;
 
 add_header X-Frame-Options "SAMEORIGIN" always;
@@ -30,10 +30,10 @@ add_header X-Frame-Options "SAMEORIGIN" always;
 
 server {
   listen 443 ssl;
-  server_name management.peomax.com;
+  server_name name.name.com;
 
-  ssl_certificate /etc/letsencrypt/live/management.peomax.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/management.peomax.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/name.name.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/name.name.com/privkey.pem;
 
 add_header X-Frame-Options "SAMEORIGIN" always;
 
@@ -50,10 +50,10 @@ add_header X-Frame-Options "SAMEORIGIN" always;
 
 server {
   listen 443 ssl;
-  server_name api.peomax.com;
+  server_name api.name.com;
 
-  ssl_certificate /etc/letsencrypt/live/api.peomax.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/api.peomax.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/api.name.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/api.name.com/privkey.pem;
 
 add_header X-Frame-Options "SAMEORIGIN" always;
 
@@ -84,10 +84,10 @@ add_header X-Frame-Options "SAMEORIGIN" always;
 
 server {
   listen 443 ssl;
-  server_name admin.peomax.com;
+  server_name name.name.com;
 
-  ssl_certificate /etc/letsencrypt/live/admin.peomax.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/admin.peomax.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/name.name.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/name.name.com/privkey.pem;
 
 add_header X-Frame-Options "SAMEORIGIN" always;
 
